prometheus/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-devops
